// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelineDot should match snapshot when not selected 1`] = `
<div
  class="w-4 h-4 rounded-full border-3 transition-all duration-300 mb-4 bg-white border-blue-600 group-hover:bg-blue-100 group-hover:scale-110"
/>
`;

exports[`TimelineDot should match snapshot when selected 1`] = `
<div
  class="w-4 h-4 rounded-full border-3 transition-all duration-300 mb-4 bg-blue-600 border-blue-600 scale-125 shadow-lg"
/>
`;
